[gd_scene load_steps=2 format=3 uid="uid://endmenu001"]

[ext_resource type="Script" uid="uid://2jmgb7ixhi7b" path="res://Contents/Menu/Scripts/endmenu_script.gd" id="1"]

[node name="EndMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="CongratulationsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.3, 1)
theme_override_font_sizes/font_size = 42
text = "Congratulations!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ThanksLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Thanks for playing our game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="TimeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 28
text = "Your time: 00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeathLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 28
text = "Deaths: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="RetryButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Retry"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Exit"
